Implement external player with TetrisServer socket client